refactor test find user by id use case